--- a/toursim.html
+++ b/toursim.html
@@ -13,7 +13,7 @@
         <div class="tourism-card">
             <h1 class="main-heading">Tourism</h1>
             <p class="paragraph">Plan your trip.</p>
-            <button class="button">Get Started</button>
+            <button class="button">Started</button>
         </div>
     </div>
 </body>
